[gd_scene load_steps=15 format=3 uid="uid://cd8csxijj58xm"]

[ext_resource type="Script" path="res://scenes/Enemies/Slime/slime.gd" id="1_saaia"]
[ext_resource type="Texture2D" uid="uid://bc7v8y40ga51j" path="res://Assets/Enemies/Slime.png" id="2_tojs7"]
[ext_resource type="PackedScene" uid="uid://dnuxoxls6g06a" path="res://scenes/Hud/health_bar.tscn" id="3_fb6ss"]
[ext_resource type="PackedScene" path="res://scenes/Stats/Health/health_stats.tscn" id="4_48ben"]

[sub_resource type="Gradient" id="Gradient_id1ch"]
offsets = PackedFloat32Array(0.125541, 0.408369)
colors = PackedColorArray(0.462745, 0.462745, 0.462745, 1, 1, 1, 1, 1)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_5ugq4"]
radius = 4.0
height = 16.0

[sub_resource type="Animation" id="Animation_51puj"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HitBox/CollisionShape2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -4)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HitBox/CollisionShape2D:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_e3oj7"]
resource_name = "moveDown"
length = 0.8
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 0), Vector2i(0, 1), Vector2i(0, 2), Vector2i(0, 3)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HitBox/CollisionShape2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, -4), Vector2(0, -8), Vector2(0, -7), Vector2(0, -4)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HitBox/CollisionShape2D:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.468, 1), Vector2(1.351, 1), Vector2(1, 1.19)]
}

[sub_resource type="Animation" id="Animation_r165d"]
resource_name = "moveLeft"
length = 0.8
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(2, 0), Vector2i(2, 1), Vector2i(2, 2), Vector2i(2, 3)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HitBox/CollisionShape2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2(0, -4), Vector2(0, -8), Vector2(0, -7), Vector2(0, -4)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HitBox/CollisionShape2D:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2(1, 1), Vector2(1.468, 1), Vector2(1.351, 1), Vector2(1, 1.19)]
}

[sub_resource type="Animation" id="Animation_cx1hc"]
resource_name = "moveRight"
length = 0.8
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(3, 0), Vector2i(3, 1), Vector2i(3, 2), Vector2i(3, 3)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HitBox/CollisionShape2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2(0, -4), Vector2(0, -8), Vector2(0, -7), Vector2(0, -4)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HitBox/CollisionShape2D:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2(1, 1), Vector2(1.468, 1), Vector2(1.351, 1), Vector2(1, 1.19)]
}

[sub_resource type="Animation" id="Animation_jp3bn"]
resource_name = "moveUp"
length = 0.8
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(1, 0), Vector2i(1, 1), Vector2i(1, 2), Vector2i(1, 3)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HitBox/CollisionShape2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2(0, -4), Vector2(0, -8), Vector2(0, -7), Vector2(0, -4)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HitBox/CollisionShape2D:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2(1, 1), Vector2(1.468, 1), Vector2(1.351, 1), Vector2(1, 1.19)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ump6k"]
_data = {
"RESET": SubResource("Animation_51puj"),
"moveDown": SubResource("Animation_e3oj7"),
"moveLeft": SubResource("Animation_r165d"),
"moveRight": SubResource("Animation_cx1hc"),
"moveUp": SubResource("Animation_jp3bn")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_1kxgk"]
radius = 4.0
height = 14.0

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_pp4nm"]
properties/0/path = NodePath("HealthStats:cur_health")
properties/0/spawn = true
properties/0/sync = true
properties/1/path = NodePath(".:position")
properties/1/spawn = true
properties/1/sync = true
properties/2/path = NodePath("AnimationPlayer:current_animation")
properties/2/spawn = true
properties/2/sync = true

[node name="Slime" type="CharacterBody2D" groups=["Enemy"]]
z_index = 1
y_sort_enabled = true
texture_filter = 1
collision_layer = 2
collision_mask = 6
motion_mode = 1
script = ExtResource("1_saaia")

[node name="DeathParticles" type="CPUParticles2D" parent="."]
position = Vector2(0, -4)
emitting = false
amount = 40
lifetime = 0.5
one_shot = true
speed_scale = 0.5
explosiveness = 1.0
emission_shape = 1
emission_sphere_radius = 6.99
direction = Vector2(0, 0)
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 41.4
initial_velocity_max = 73.84
angular_velocity_min = 45.0
angular_velocity_max = 129.54
scale_amount_min = 2.0
scale_amount_max = 5.0
color = Color(0.317647, 0.776471, 0.882353, 1)
color_ramp = SubResource("Gradient_id1ch")
hue_variation_min = -0.26
hue_variation_max = 0.46

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, -4)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_5ugq4")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ump6k")
}

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -7)
texture = ExtResource("2_tojs7")
hframes = 4
vframes = 4

[node name="HitBox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 10

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2(0, -4)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_1kxgk")

[node name="HealthBar" parent="." instance=ExtResource("3_fb6ss")]
z_index = 1
y_sort_enabled = true
offset_left = -13.0
offset_top = -18.0
offset_right = -13.0
offset_bottom = -18.0
scale = Vector2(0.34, 0.34)

[node name="HealthStats" parent="." instance=ExtResource("4_48ben")]

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_pp4nm")

[connection signal="area_entered" from="HitBox" to="." method="_on_hit_box_area_entered"]
[connection signal="dead" from="HealthStats" to="." method="_on_health_stats_dead"]
